requiring/rate-limiter

--- a/.env
+++ b/.env
@@ -28,3 +28,9 @@ APP_SECRET=eed755b6acd34672a0cffca06d39a059
 #
 DATABASE_URL="mysql://root:root@127.0.0.1:8889/movie_list?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/lock ###
+# Choose one of the stores below
+# postgresql+advisory://db_user:db_password@localhost/db_name
+LOCK_DSN=semaphore
+###< symfony/lock ###
