--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,7 +16,7 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
+            anonymous: false
             lazy: true
             provider: app_user_provider
             
