adding register path in menu

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=eed755b6acd34672a0cffca06d39a059
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
