--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,8 +1,6 @@
 doctrine:
     dbal:
-        driver: pdo_sqlite
-        path: "%kernel.cache_dir%/test.db"
-        url: null
+        url: '%env(resolve:DATABASE_URL)%'
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '13'
