--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -26,6 +26,11 @@ security:
             # configure the maximum login attempts (per minute)
             login_throttling:
                 max_attempts: 3
+            custom_authenticator: App\Security\AppAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                # target: app_any_route
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
