--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     tmdb_api_key: '33d05c8e37247f33afa3107d85157dad'
+    tmdb_api_path: 'https://api.themoviedb.org/3/'
 
 services:
     # default configuration for services in *this* file
@@ -15,6 +16,7 @@ services:
     App\Service\TMDB_API_Service\TMDB_API:
         arguments:
             $api_key: '%tmdb_api_key%'
+            $path: '%tmdb_api_path%'
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
