--- a/config/services.yaml
+++ b/config/services.yaml
@@ -14,6 +14,7 @@ services:
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
     App\Service\TMDB_API_Service\TMDB_API:
+        autowire: true
         arguments:
             $api_key: '%tmdb_api_key%'
             $path: '%tmdb_api_path%'
