--- a/config/services.yaml
+++ b/config/services.yaml
@@ -37,3 +37,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    
+    application_backend.event_listener.user_entity:
+        class: Application\BackendBundle\EventListener\UserEntityListener
+        tags:
+                - { name: doctrine.event_listener, event: prePersist }
